--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,17 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+.divconteudo{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+body{
+  color: white;
+  background-color: black;
+}
+
 
 .App-header {
   background-color: #282c34;
